--- a/studio/templates/studio/review_guide.html
+++ b/studio/templates/studio/review_guide.html
@@ -123,7 +123,7 @@
                                 <i class="fas fa-exclamation-triangle mr-2"></i>Not Logged In?
                             </h4>
                             <p class="text-gray-300 text-sm mb-3">If you're not logged in, you'll see a "Login to Review" button instead.</p>
-                            <a href="{% url 'account_login' %}" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg text-sm transition">
+                            <a href=""#"" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg text-sm transition">
                                 <i class="fas fa-sign-in-alt mr-2"></i>Login Now
                             </a>
                         </div>
@@ -133,7 +133,7 @@
                                 <i class="fas fa-user-plus mr-2"></i>Need an Account?
                             </h4>
                             <p class="text-gray-300 text-sm mb-3">Don't have an account yet? Create one for free!</p>
-                            <a href="{% url 'account_signup' %}" class="inline-block bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg text-sm transition">
+                            <a href=""#"" class="inline-block bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg text-sm transition">
                                 <i class="fas fa-user-plus mr-2"></i>Sign Up Free
                             </a>
                         </div>
