--- a/studio/templates/studio/community_showcase.html
+++ b/studio/templates/studio/community_showcase.html
@@ -84,7 +84,7 @@
                         <div class="flex items-center justify-between">
                             <div class="flex items-center space-x-2 text-sm text-gray-400">
                                 <i class="fas fa-user"></i>
-                                <span>{{ content.user.username }}</span>
+                                <span>{{ content.none.username }}</span>
                             </div>
                             <div class="flex items-center space-x-4 text-sm text-gray-400">
                                 <span><i class="fas fa-heart text-red-400 mr-1"></i>{{ content.like_count }}</span>
@@ -128,7 +128,7 @@
                         <h4 class="text-md font-semibold text-white mb-1 line-clamp-1">{{ content.title }}</h4>
                         <p class="text-gray-400 text-xs mb-2 line-clamp-2">{{ content.description|truncatewords:10 }}</p>
                         <div class="flex items-center justify-between text-xs text-gray-500">
-                            <span>{{ content.user.username }}</span>
+                            <span>{{ content.none.username }}</span>
                             <div class="flex items-center space-x-2">
                                 <span><i class="fas fa-heart text-red-400 mr-1"></i>{{ content.like_count }}</span>
                                 {% if content.video_url %}
